# octfiles-101

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile  README.md
doc/: Index.html  Index.md
doc-md/: Index.md
doc-project/: Developer-Notes.md  TODO.md
doc-src/: Index.asciidoc
doc-src/src/: ex03_inputs_and_error_checking.cc
docs/: Index.html  index.html
docs-src/: index.asciidoc
docs-src/src/: Makefile  ex02_scalar_numerics.cc  ex03_inputs_and_error_checking.cc  ex04_basic_arithmetic.cc  ex05_sizes_and_indexing.cc  ex10_binsearch.cc
scratch/: s01_01_arithmetic.cc  s01_01_call_error.cc  s01_02_call_error.cc  s01_02_error_msg_string_construction.cc  s01_03_convert_NDArray_to_octave_value_list.cc  s01_04_creating_numeric_scalars.cc
src/: ex01_hello_world.cc  ex03_inputs_and_error_checking.cc
